# groove-lab

./: .eslintrc.cjs  .gitignore  CLAUDE.md  README.md  TEST_COVERAGE_LOOPS.md  TEST_GENERATION_SUMMARY.md  TEST_PLAN_LOOP.md  TEST_PLAN_LOOPS.md  TEST_WRITER_OUTPUT.md  TOLERANCE_CONFIG_TESTS_SUMMARY.md  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.base.json
.claude/agents/: feature-builder.md  spec-writer.md  test-writer.md  (+1 more)
.husky/: pre-commit
agents/: README.md
apps/api/: pyproject.toml
apps/api/app/: db.py  main.py
apps/api/app/models/: exercise.py
apps/api/app/routes/: exercises.py  health.py  imports.py
apps/api/app/services/: file_storage.py  midi_parser.py
apps/api/app/tests/: test_exercise_detail.py  test_exercises.py  test_health.py  test_import.py
apps/api/storage/: exercises.db
docs/: SPEC_CLI_OPTIMIZATION.md  development-workflow.md  spec-cli-usage.md
prompts/: analyze-spec.md  generate-tests.md  implement-feature-first.md  implement-feature.md  implement-tests.md  plan-spec.md  review-spec.md  verify-spec.md
specs/: browse-exercises.md  drum-exercise-playback.md  drum-hit-detection.md  drum-rudiment-colors.md  exercise-browser-database-integration.md  exercise-import-backend.md  exercise-playback-loop-controls.md  exercise-playback-loops.md  exercise-playback-metronome.md  exercise-playback-tools-sidebar.md  global-header.md  homepage.md  import-frontend-integration.md  import-page.md  metronome-visualization.md  preserve-folder-structure.md  theme.md
tools/: README.md  run-spec-workflow.sh
workflows/: spec-driven-dev.md
(+77 files in other folders)
