[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "groovelab-api"
version = "0.1.0"
description = "GrooveLab FastAPI backend — intelligent music practice platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
  "python-multipart>=0.0.9",
  "mido>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1.0",
  "pytest-asyncio>=0.23.5",
  "httpx>=0.27.0",
  "ruff>=0.3.0",
  "black>=24.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto"
